--- a/trunk/WIP/Sources/Android/TaxiNetMR/res/layout/fragment_blank.xml
+++ b/trunk/WIP/Sources/Android/TaxiNetMR/res/layout/fragment_blank.xml
@@ -1,7 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/main_map"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-	
+
     <android.support.v4.widget.DrawerLayout
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
@@ -12,10 +13,7 @@
             android:name="com.google.android.gms.maps.MapFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-        
-        
 
-        
         <!-- Listview to display slider menu -->
 
         <ListView
@@ -29,173 +27,199 @@
             android:dividerHeight="1dp"
             android:listSelector="@drawable/list_selector" />
     </android.support.v4.widget.DrawerLayout>
-    
-    <RelativeLayout
-            android:id="@+id/pick_point_new_screen"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
-            <fragment
-            android:id="@+id/map_pick_point"
-            android:name="com.google.android.gms.maps.MapFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-        </RelativeLayout>
-    
+    <Button
+        android:id="@+id/btn_pick_start_point_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/rider_send_request_information"
+        android:layout_alignParentRight="true"
+        android:text="Pickkkkkkkkk" />
+
+    <Button
+        android:id="@+id/btn_pick_end_point_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/rider_send_request_information"
+        android:layout_alignParentRight="true"
+        android:text="Pickkkkkkkkk" />
+
     <RelativeLayout
-            android:id="@+id/no_driver_nearby"
+        android:id="@+id/no_driver_nearby"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true" >
+
+        <Button
+            android:id="@+id/call_taxi_firm"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true" 
-            android:background="@color/light_green">
+            android:layout_alignParentBottom="true"
+            android:onClick="callTaxiFirms"
+            android:text="@string/call_taxi_firm" />
+    </RelativeLayout>
 
-            <Button
-                android:id="@+id/call_taxi_firm"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:onClick="callTaxiFirms"
-                android:text="@string/call_taxi_firm" />
-        </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/rider_send_request_information"
+        android:layout_width="fill_parent"
+        android:layout_height="200dp"
+        android:layout_alignParentBottom="true" >
+
+        <TextView
+            android:id="@+id/price"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:text="@string/price" />
+
+        <TextView
+            android:id="@+id/first_price_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/price"
+            android:text="100.000 VND" />
 
         <RelativeLayout
-            android:id="@+id/rider_send_request_information"
-            android:layout_width="fill_parent"
-            android:layout_height="100dp"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="50dp" 
-            android:background="@color/light_green">
-
-            <TextView
-                android:id="@+id/price"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:text="@string/price" />
-
-            <TextView
-                android:id="@+id/first_price_value"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/price"
-                android:text="100.000 VND" />
-            <RelativeLayout
             android:id="@+id/pick_point"
             android:layout_width="fill_parent"
-            android:layout_height="35dp"
-            android:layout_below="@+id/price"
-            android:background="@color/light_green">
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/price" >
 
             <TextView
                 android:id="@+id/start_point"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/btn_pick_start_point"
                 android:layout_alignParentTop="true"
+                android:layout_alignTop="@+id/btn_pick_start_point"
+                android:gravity="center|left"
                 android:text="@string/start_point" />
 
             <TextView
                 android:id="@+id/start_point_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/btn_pick_start_point"
                 android:layout_alignParentTop="true"
+                android:layout_alignRight="@+id/btn_pick_start_point"
+                android:layout_alignTop="@+id/btn_pick_start_point"
                 android:layout_toRightOf="@+id/start_point"
+                android:gravity="center|left"
                 android:text="ABC" />
+
+            <Button
+                android:id="@+id/btn_pick_start_point"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:text="Pick" />
 
             <TextView
                 android:id="@+id/end_point"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/btn_pick_end_point"
+                android:layout_alignTop="@+id/btn_pick_end_point"
                 android:layout_below="@+id/start_point"
+                android:gravity="center|left"
                 android:text="@string/end_point" />
 
             <TextView
                 android:id="@+id/end_point_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/btn_pick_end_point"
+                android:layout_alignTop="@+id/btn_pick_end_point"
                 android:layout_below="@+id/start_point_value"
                 android:layout_toRightOf="@+id/end_point"
+                android:gravity="center|left"
                 android:text="XYZ" />
-			</RelativeLayout>
-            <TextView
-                android:id="@+id/cost_estimate"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/pick_point"
-                android:text="@string/cost_estimate" />
 
-            <TextView
-                android:id="@+id/cost_estimate_value"
+            <Button
+                android:id="@+id/btn_pick_end_point"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/pick_point"
-                android:layout_toRightOf="@+id/cost_estimate"
-                android:text="500.000VND" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/rider_send_request_first_step"
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:layout_alignParentBottom="true" 
-            android:background="@color/light_green">
-
-            <TextView
-                android:id="@+id/driver_full_name"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:text="Anh: NVX" />
-
-            <Button
-                android:id="@+id/btn_rider_send_request"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_toRightOf="@+id/driver_full_name"
-                android:text="@string/send_request" />
-        </RelativeLayout>
-        
-        <RelativeLayout
-            android:id="@+id/rider_send_request_waiting_step"
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:layout_alignParentBottom="true" 
-            android:background="@color/light_green">
-
-            <TextView
-                android:id="@+id/rider_waiting_response"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:text="@string/rider_waiting_response" />
-            
-            <Button
-                android:id="@+id/btn_rider_cancel_waiting_request"
-                android:layout_width="100dp"
-                android:layout_height="fill_parent"
-                android:layout_toRightOf="@+id/rider_waiting_response"
-                android:text="@string/cancel" />
-
-        </RelativeLayout>
-        
-        <RelativeLayout
-            android:id="@+id/rider_send_request_driver_accept"
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:layout_alignParentBottom="true" 
-            android:background="@color/light_green">
-
-            <TextView
-                android:id="@+id/driver_response_accept"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:text="@string/driver_response_accept" />
-            
-            <Button
-                android:id="@+id/btn_rider_cancel_driver_accept_request"
-                android:layout_width="100dp"
-                android:layout_height="fill_parent"
-                android:layout_toRightOf="@+id/driver_response_accept"
                 android:layout_alignParentRight="true"
-                android:text="@string/cancel" />
-
+                android:layout_below="@+id/btn_pick_start_point"
+                android:text="Pick" />
         </RelativeLayout>
+
+        <TextView
+            android:id="@+id/cost_estimate"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/pick_point"
+            android:text="@string/cost_estimate" />
+
+        <TextView
+            android:id="@+id/cost_estimate_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/pick_point"
+            android:layout_toRightOf="@+id/cost_estimate"
+            android:text="500.000VND" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/rider_send_request_first_step"
+        android:layout_width="fill_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true" >
+
+        <TextView
+            android:id="@+id/driver_full_name"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:text="Anh: NVX" />
+
+        <Button
+            android:id="@+id/btn_rider_send_request"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_toRightOf="@+id/driver_full_name"
+            android:text="@string/send_request" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/rider_send_request_waiting_step"
+        android:layout_width="fill_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true" >
+
+        <TextView
+            android:id="@+id/rider_waiting_response"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="@string/rider_waiting_response" />
+
+        <Button
+            android:id="@+id/btn_rider_cancel_waiting_request"
+            android:layout_width="100dp"
+            android:layout_height="fill_parent"
+            android:layout_alignParentRight="true"
+            android:layout_toRightOf="@+id/rider_waiting_response"
+            android:text="@string/cancel" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/rider_send_request_driver_accept"
+        android:layout_width="fill_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true" >
+
+        <TextView
+            android:id="@+id/driver_response_accept"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="@string/driver_response_accept" />
+
+        <Button
+            android:id="@+id/btn_rider_cancel_driver_accept_request"
+            android:layout_width="100dp"
+            android:layout_height="fill_parent"
+            android:layout_alignParentRight="true"
+            android:layout_toRightOf="@+id/driver_response_accept"
+            android:text="@string/cancel" />
+    </RelativeLayout>
 
 </RelativeLayout>
