--- a/trunk/WIP/Sources/Android/TaxiNetMR/res/layout/activity_login.xml
+++ b/trunk/WIP/Sources/Android/TaxiNetMR/res/layout/activity_login.xml
@@ -1,74 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-
-    <EditText
-        android:id="@+id/et_email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/rider_login_email"
-        android:layout_alignRight="@+id/bt_login"
-        android:ems="10"
-        android:inputType="textPassword" />
-
-    <EditText
-        android:id="@+id/et_password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/rider_login_password"
-        android:layout_alignLeft="@+id/et_password"
-        android:ems="10"
-        android:inputType="textPassword" />
-
-    <TextView
-        android:id="@+id/rider_login_email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/rider_login_password"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="179dp"
-        android:text="@string/email" />
-
-    <TextView
-        android:id="@+id/rider_login_password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/rider_login_email"
-        android:layout_marginTop="30dp"
-        android:layout_toLeftOf="@+id/et_email"
-        android:text="@string/password" />
-
-    <Button
-        android:id="@+id/bt_login"
-        android:layout_width="280dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/et_email"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        android:onClick="login"
-        android:text="@string/login" />
-
-    <Button
-        android:id="@+id/bt_register"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/bt_login"
-        android:layout_below="@+id/bt_login"
-        android:layout_marginTop="20dp"
-        android:layout_toLeftOf="@+id/bn_forgot_password"
-        android:onClick="register"
-        android:text="@string/register" />
-
-    <Button
-        android:id="@+id/bn_forgot_password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/bt_register"
-        android:layout_alignBottom="@+id/bt_register"
-        android:layout_alignRight="@+id/bt_login"
-        android:onClick="getPassword"
-        android:text="@string/forgot_password" />
+    android:layout_height="match_parent"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp" >
 
     <ImageView
         android:id="@+id/logo"
@@ -77,6 +12,55 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="55dp"
         android:contentDescription="@string/app_name"
-        android:src="@drawable/common_signin_btn_text_focus_dark" />
+        android:src="@drawable/ic_launcher" />
+
+    <EditText
+        android:id="@+id/et_email"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/logo"
+        android:layout_marginTop="30dp"
+        android:ems="10"
+        android:hint="@string/email"
+        android:inputType="textEmailAddress" />
+
+    <EditText
+        android:id="@+id/et_password"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/et_email"
+        android:layout_marginTop="10dp"
+        android:ems="10"
+        android:hint="@string/password"
+        android:inputType="textPassword" />
+
+    <Button
+        android:id="@+id/bt_login"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/et_password"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:onClick="login"
+        android:text="@string/login" />
+    
+     <Button
+        android:id="@+id/bt_register"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/bt_login"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:onClick="login"
+        android:text="@string/register" />
+
+    <Button
+        android:id="@+id/bn_forgot_password"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/bt_register"
+        android:layout_marginTop="10dp"
+        android:onClick="getPassword"
+        android:text="@string/forgot_password" />
 
 </RelativeLayout>
